kubernetes/apps/selfhosted/booklore/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: booklore
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: booklore
      app.kubernetes.io/instance: booklore
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-brauni-dev-public
      toPorts:
        - ports:
            - port: "6060"
              protocol: TCP
